grid added to all with class splash

--- a/style.css
+++ b/style.css
@@ -191,6 +191,10 @@ footer {
     display: inline;
   }
 
+  .splash {
+    grid-column: 1/4;
+  }
+
   .footer_info {
     position: sticky;
     display: flex;
