--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ p {
   color: var(--text);
 }
 
+.knap {
+  display: block;
+  margin: 0 auto;
+}
+
 button {
   margin-top: 1rem;
   border: 0;
@@ -139,8 +144,13 @@ a:hover {
   color: var(--primary);
 }
 
-#website .hero {
+.splash {
   grid-column: 1/4;
+  padding: 0;
+}
+
+.forord {
+  text-align: center;
 }
 
 footer {
