--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ button {
   /*    transform: scale(0);*/
   transform: translateX(-100%);
   opacity: 0;
+  height: 0;
 }
 
 .nav_style {
@@ -101,7 +102,8 @@ header {
   /* display: flex; */
   position: sticky;
   top: 0;
-  padding: 1rem 1.5rem;
+  /*
+  padding: 1rem 1.5rem;*/
   gap: 20px;
   text-align: left;
   box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.3);
@@ -124,6 +126,7 @@ header .logo {
 
 #menuknap {
   display: inline-block;
+  padding: 1rem;
 }
 
 #menu {
@@ -132,9 +135,20 @@ header .logo {
   height: 200px; */
   transition: transform 0.3s;
   transform-origin: top left;
-  list-style: none;
+  /*list-style: none;*/
   /*margin: 1rem;
   padding: 1rem;*/
+  /*
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;*/
+}
+
+header ul li {
+  list-style: none;
+  margin: 20px 20px;
 }
 
 li a {
