--- a/style.css
+++ b/style.css
@@ -328,6 +328,7 @@ footer {
     padding: 3rem 1rem;
     border-right: solid var(--text);
     border-radius: 0px 0px 0px 20px;
+    padding-top: 100px;
   }
 
   .col_right {
@@ -345,6 +346,7 @@ footer {
     margin-left: -2.5px;
     border-radius: 0px 20px 0px 0px;
     grid-column: 2/3;
+    padding-bottom: 100px;
   }
 
   #portfolio > section {
