padding added to web header

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    padding: 1rem 1.5rem;
   }
 
   header .logo img {
