--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ h1 {
 h2 {
   font-family: "montserrat", sans-serif;
   color: var(--text);
+  padding: 1rem;
+  padding-left: 0;
 }
 
 h3 {
@@ -230,6 +232,7 @@ footer {
 .wide_2 {
   grid-column: 1/4;
   background-color: var(--secondary);
+  margin-top: 2rem;
 }
 
 @media (min-width: 700px) {
@@ -296,15 +299,24 @@ footer {
     grid-template-columns: 1fr minmax(0, 1000px) 1fr;
   }
 
-  .text_indhold h1,
+  .text_indhold,
   hr,
   p {
     grid-column: 2/3;
   }
 
-  .web_doku h2,
-  img {
+  .text_indhold h1 {
     grid-column: 2/3;
+    text-align: center;
+  }
+
+  .web_doku img {
+    grid-column: 2/3;
+  }
+
+  .web_doku h2 {
+    grid-column: 2/3;
+    padding: 1rem;
   }
 
   .web_doku {
@@ -376,7 +388,16 @@ footer {
     width: 25%;
   }
 
+  .round_2 {
+    width: 25%;
+    grid-column: 2/3;
+  }
+
   .col_right {
     grid-column: 2/3;
+  }
+
+  .temabillede {
+    max-width: 500px;
   }
 }
