--- a/style.css
+++ b/style.css
@@ -43,15 +43,14 @@ main > section {
 h1 {
   font-family: "montserrat", sans-serif;
   font-size: 2em;
-  margin-top: 1rem;
+
   letter-spacing: 1.1px;
   color: var(--text);
-  padding-left: 1rem;
 }
 
 h2 {
   font-family: "montserrat", sans-serif;
-  font-size: 2rem;
+  font-size: 1.65rem;
   letter-spacing: 1.1px;
   margin-bottom: 1rem;
   margin-top: 1rem;
@@ -86,6 +85,7 @@ p {
   line-height: 25px;
   /* margin-bottom: 1rem; */
   color: var(--text);
+  padding-block: 1rem;
 }
 
 button {
@@ -225,6 +225,10 @@ button:hover {
   background-image: url(billeder/baggrund7.svg);
 }
 
+.wide h3 {
+  text-align: center;
+}
+
 .forord_center {
   text-align: center;
 }
@@ -247,6 +251,10 @@ button:hover {
 
 .tema_billeder .billede_3 {
   padding: 1rem;
+}
+
+#portfolio > h2 {
+  font-size: 1.85rem;
 }
 
 footer {
@@ -297,6 +305,7 @@ footer {
   grid-column: 1/4;
   /*background-image: linear-gradient(to right, #f2c849, #ea819a);*/
   background-image: url(billeder/baggrund6.png);
+  padding: 2rem;
 }
 
 .wide p {
@@ -307,18 +316,23 @@ footer {
 .wide_2 {
   grid-column: 1/4;
   background-color: var(--secondary);
-  margin-top: 2rem;
+  padding: 2rem;
 }
 
 .wide_3 {
   grid-column: 1/4;
   background-color: var(--tertiary);
+  padding: 2rem;
 }
 
 @media (min-width: 700px) {
   main {
     display: grid;
     grid-template-columns: 1fr minmax(0, 1200px) 1fr;
+  }
+
+  main > section {
+    padding-inline: 5rem;
   }
 
   #menuknap {
@@ -352,8 +366,48 @@ footer {
     display: inline;
   }
 
+  h1 {
+    margin-top: 1rem;
+  }
+
+  h2 {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    padding-top: 0;
+    padding-left: 0.5rem;
+  }
+
+  h3 {
+    margin-bottom: 0;
+    margin-top: 0;
+    /*padding-left: 1rem;*/
+    color: var(--text);
+    padding-inline: 0.5rem;
+  }
+
+  h4 {
+    padding-left: 0.5rem;
+  }
+
+  p {
+    /*padding-inline: 1rem; */
+    padding-inline: 0.5rem;
+  }
+
   button {
     width: 150px;
+  }
+
+  .text_left h2 {
+    padding: 0.5rem;
+  }
+
+  .text_right {
+    padding-left: 2rem;
+  }
+
+  .text_right h2 {
+    padding: 0.5rem;
   }
 
   .knap {
@@ -386,6 +440,7 @@ footer {
   .text_indhold {
     display: grid;
     grid-template-columns: 1fr minmax(0, 1000px) 1fr;
+    padding-inline: 3rem;
   }
 
   .text_indhold hr p {
@@ -399,6 +454,10 @@ footer {
     grid-column: 2/3;
   }
 
+  .text_left {
+    padding-right: 2rem;
+  }
+
   .tema_6 {
     display: grid;
     grid-template-columns: 1fr minmax(0, 1000px) 1fr;
@@ -408,7 +467,7 @@ footer {
     grid-column: 2/3;
   }
   .tema_6_billede {
-    padding: 1rem;
+    /* padding: 1rem;*/
   }
 
   .tema_billeder {
@@ -423,6 +482,25 @@ footer {
     margin: 2rem;
   }
 
+  .billede_wrapper {
+    display: grid;
+    grid-template-columns: 1fr minmax(0, 1200px) 1fr;
+  }
+
+  .om_mig_billeder {
+    grid-column: 2/3;
+  }
+
+  .profilbillede2 {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .profilbillede1 {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
   .paragraph {
     padding-block: 1rem;
   }
@@ -433,7 +511,6 @@ footer {
 
   .web_doku h2 {
     grid-column: 2/3;
-    padding: 1rem;
   }
 
   .web_doku {
@@ -462,6 +539,11 @@ footer {
   .section_wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    justify-content: center;
+  }
+
+  .section_wrapper .tegning {
+    grid-column: 2/3;
   }
 
   .col_left {
@@ -498,7 +580,8 @@ footer {
   }
 
   #portfolio > section {
-    padding: 0;
+    padding-inline: 3rem 5rem;
+    padding-block: 0;
   }
 
   .round {
@@ -519,6 +602,9 @@ footer {
 }
 
 @media (min-width: 1000px) {
+  main > section {
+    padding-inline: 5rem;
+  }
   #portfolio > section {
     padding: 0rem 3rem;
   }
