--- a/style.css
+++ b/style.css
@@ -229,17 +229,17 @@ button:hover {
 
 details > summary {
   font-family: "monserrat", sans-serif;
-
   background-color: var(--secondary);
   border-radius: 4px;
-  margin-top: 5rem;
+  margin-top: 1rem;
   padding: 1rem;
   border: black;
   cursor: pointer;
+  font-weight: bolder;
 }
 
-details > p {
-  background-color: red;
+.paragraph {
+  margin-top: 1rem;
 }
 
 /*SECTIONS MED BAGGRUND TIL KANT*/
@@ -304,6 +304,7 @@ details > p {
 /*PLACERER TEMABILLEDE TIL HØJRE I CONTENT OG ANIMATION*/
 .right {
   grid-column: 2/3;
+  grid-row: 1;
 }
 
 /*FOOTER*/
@@ -315,8 +316,24 @@ footer {
 .footer_info .navn,
 .mail,
 .telefon {
-  text-align: center;
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 2.5rem;
+}
+
+footer {
+  padding: 2rem;
+  background-color: var(--secondary);
+}
+
+.footer_info {
+  border-left: 0;
+  justify-content: space-around;
+  color: var(--text);
+  border-left: 2px solid var(--primary);
+}
+
+.footer_info p {
+  padding: 0;
+  margin-left: 0rem;
 }
 
 /*SKÆRME STØRRE END 700PX*/
@@ -395,7 +412,7 @@ footer {
 
   /*KNAPPER*/
   button {
-    width: 150px;
+    width: 250px;
   }
 
   .knap {
@@ -426,6 +443,11 @@ footer {
     max-width: 500px;
   }
 
+  /*KNAPPER UNDER TEMAER*/
+  .opgave_info button {
+    display: inline-block;
+  }
+
   /*TEKST/ALLE PORTFOLIO OPGAVEBESKRIVELSER*/
   .paragraph {
     padding-block: 1rem;
@@ -450,6 +472,16 @@ footer {
     padding-left: 0rem;
   }
 
+  /*TEMA OVERSKRIFT "OPGAVER I TEMAET"*/
+  .tema_overskrift {
+    margin-bottom: 2rem;
+  }
+
+  /*DETAILS AND SUMMARY PÅ ALLE UNDERSIDER I PORTFOLIO*/
+  details > summary {
+    margin-top: 2rem;
+  }
+
   /*FORSIDE*/
   .splash {
     grid-column: 1/4;
@@ -471,10 +503,6 @@ footer {
   .tema_6_text p {
     padding-top: 0.5rem;
   }
-
-  /*.tema_6_text h3 {
-    padding-left: 1rem;
-  }*/
 
   /*PORTFOLIO*/
 
@@ -606,6 +634,21 @@ footer {
     top: 0;
     padding: 1rem 1.5rem;
     margin: 0;
+    border-left: 0;
+  }
+
+  .navn,
+  .telefon,
+  .mail {
+    border-left: 2px solid var(--primary);
+    padding-left: 25px;
+    margin: 0;
+  }
+
+  .footer_info p {
+    padding: 0;
+    margin-left: 0rem;
+    font-size: 0.75rem;
   }
 }
 
@@ -615,6 +658,7 @@ footer {
   main > section {
     padding-inline: 5rem;
   }
+
   #portfolio > section {
     padding: 0rem 3rem;
   }
@@ -628,12 +672,13 @@ footer {
   /*SECTIONS MED BAGGRUND TIL KANT*/
 
   .wide {
-    padding-inline: 5rem;
+    padding: 5rem;
   }
 
   .wide_2 {
     padding: 0;
     padding-inline: 5rem;
+    padding-block: 2rem;
   }
 
   /*ØVERSTE TEKST PÅ ALLE SIDER UNDTAGEN FORSIDE OG PORTFOLIO FORSIDE, DER ER FORORD CENTER*/
@@ -700,6 +745,15 @@ footer {
 
   .text_right {
     padding-right: 0;
-    padding-left: 2rem;
+    /*padding-left: 2rem;*/
+    padding-left: 5rem;
+  }
+
+  .text_left {
+    padding-right: 5rem;
+  }
+
+  .footer_info p {
+    font-size: 1rem;
   }
 }
