--- a/style.css
+++ b/style.css
@@ -18,14 +18,6 @@ html {
   --tertiary: #ea819a;
   --accent: #f3f3f5;
   --text: #404042;
-
-  --space-xxs: 0.25rem;
-  --space-xs: 0.5rem;
-  --space-sm: 1rem;
-  --space-md: 1.5rem;
-  --space-lg: 2rem;
-  --space-xl: 3rem;
-  --space-xxl: 5rem;
 }
 
 body {
@@ -160,7 +152,7 @@ a:hover {
 
 /*KNAPPER*/
 
-button {
+.button {
   margin-top: 1rem;
   border: 0;
   background-color: var(--primary);
@@ -169,13 +161,14 @@ button {
   color: var(--text);
   margin-right: 1rem;
   width: 300px;
+  text-align: center;
 }
 
 .knap {
   text-align: end;
 }
 
-button:hover {
+.button:hover {
   background-color: var(--text);
 }
 
@@ -401,7 +394,7 @@ footer {
 
   .knap {
     text-align: end;
-    padding-block: 1rem;
+    /*padding-block: 1rem; */
   }
 
   /**FÆLLES STYLES**/
@@ -412,7 +405,7 @@ footer {
   }
 
   .wide_2 {
-    padding-inline: 5rem;
+    /*padding-inline: 5rem;*/
   }
 
   /*MUTUAL SECTION WRAPPER BRUGT TIL AT LAVE 2 GRID COLUMNS*/
@@ -428,7 +421,7 @@ footer {
   }
 
   /*KNAPPER UNDER TEMAER*/
-  .opgave_info button {
+  .opgave_info .button {
     display: inline-block;
   }
 
@@ -490,6 +483,21 @@ footer {
 
   .tema_6_text p {
     padding-top: 0.5rem;
+    padding-left: 0rem;
+  }
+
+  .button {
+    margin-top: 0.5rem;
+    margin-right: 0;
+  }
+
+  .portfolio_knap {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .knap {
+    grid-column: 2/3;
   }
 
   /*PORTFOLIO*/
@@ -701,6 +709,8 @@ footer {
 
   .tema_6_text p {
     padding: 1rem 1rem;
+    padding: 2rem;
+    text-align: justify;
   }
 
   .tema_6_text h3 {
